# csftracermodeling

./: .gitignore  README.md  fenics-env.yml  jax-fenics-env.yml  jax_env.yml  pyproject.toml  setup.cfg
docker/: Dockerfile
examples/: README.md  data_example.py  domain_example.py  fenics2mri.py  mri2fenics.py  visualize.py  voxelize-mesh.py
roi12/: parenchyma_mask_roi12.xml
scripts/data-processing/: README.md  estimatec.py  make_brainmask.py  mask-mri.py  normalize.py  register.sh
scripts/forward-model/: README.md  diffusion.py
scripts/inverse-model/: README.md  compare-pinn-fem-parameters.py  compare-pinn-fem-prediction.py  compare-pinn-fem.py  fem-inverse-diffusion.py  fem-postprocess.py  lossplot.py  make_roi.py  open-fem-pinn.sh  pinn-inverse-diffusion.py  pinn-postprocess.py  print_results.py  quantify_tracer.py  run_fem_study.sh
scripts/mesh-generation/: README.md  extract-ventricles.sh  make-mesh.sh  make_mesh.py
src/tracerdiffusion/: config.py  data.py  domains.py  model.py  utils.py
src/tracerdiffusion/jax_example/: inverse_diffusion.py
src/tracerdiffusion/jax_example/slim_natgrad/: data.py  derivatives.py  domains.py  integrators.py  mlp.py
src/tracerdiffusion/jax_utils/: inverse_diffusion.py
src/tracerdiffusion/jax_utils/slim_natgrad/: data.py  derivatives.py  domains.py  integrators.py  mlp.py
