[project]
name = "tracerdiffusion"
authors = [
	{ name = "Bastian Zapf", email = "bastian@xal.no" },
	{ name = "Marius Zeinhofer", email = "mariusz@simula.no" },
]
version = "0.0.1"
requires-python = ">=3.8"


# Path to README.md
readme = "README.md"

# Path to license file
license = { file = "LICENSE" }

# Direct dependencies
dependencies = [
	# numpy
	# scipy
	# matplotlib
	# torch
	# fenics
]
